# cooltests

./: CMakeLists.txt  CoolTests.cmake  README.md  cooltests.py
cooltestslib/: CMakeLists.txt  cooltestslib_colors.cpp  cooltestslib_colors.h  cooltestslib_global.h  cooltestslib_main.cpp  cooltestslib_renderer.cpp  cooltestslib_renderer.h
example/: assertion_macro.h  test1.cpp  test2.cpp
